# pandoc-lua-marshal

./: .editorconfig  CHANGELOG.md  LICENSE  README.md  cabal.project  hslua-pandoc-types.cabal  pandoc-lua-marshal.cabal  stack.yaml
.github/workflows/: ci.yml  lint.yml
cbits/: listmod.c
src/: HsluaPandocTypes.hs
src/HsLua/Pandoc/: Types.hs
src/HsLua/Pandoc/Types/: Alignment.hs  Attr.hs  Block.hs  Block.hs-boot  Cell.hs  Citation.hs  CitationMode.hs  Content.hs  Format.hs  Inline.hs  Inline.hs-boot  List.hs  ListAttributes.hs  MathType.hs  MetaValue.hs  Pandoc.hs  QuoteType.hs  TableParts.hs
src/Text/Pandoc/Lua/: Marshal.hs  SpliceList.hs  Topdown.hs  Walk.hs
src/Text/Pandoc/Lua/Marshal/: AST.hs  Alignment.hs  Attr.hs  Block.hs  Block.hs-boot  Caption.hs  Cell.hs  Cell.hs-boot  Citation.hs  CitationMode.hs  Content.hs  Filter.hs  Format.hs  Inline.hs  Inline.hs-boot  List.hs  ListAttributes.hs  MathType.hs  MetaValue.hs  Pandoc.hs  QuoteType.hs  Row.hs  Shared.hs  SimpleTable.hs  TableBody.hs  TableFoot.hs  TableHead.hs  TableParts.hs
test/: hslua-pandoc-types-test.hs  test-attr.lua  test-block.lua  test-cell.lua  test-citation.lua  test-hslua-pandoc-types.hs  test-inline.lua  test-list.lua  test-listattributes.lua  test-metavalue.lua  test-pandoc-lua-marshal.hs  test-pandoc-types.lua  test-pandoc.lua  test-simpletable.lua  test-table.lua
