cabal-version:       2.4
name:                hslua-pandoc-types
version:             0.0.0.0
synopsis:            Use pandoc types in Lua
description:         Use pandoc types in Lua
homepage:            https://github.com/tarleb/hslua-pandoc-types
bug-reports:         https://github.com/tarleb/hslua-pandoc-types/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <albert@zeitkraut.de>
copyright:           2021 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.7
                     GHC == 9.0.1
extra-source-files:  test/test-attr.lua
                   , test/test-block.lua
                   , test/test-citation.lua
                   , test/test-inline.lua
                   , test/test-listattributes.lua
                   , test/test-list-module.lua
                   , test/test-metavalue.lua
                   , test/test-pandoc.lua

source-repository head
  type:                git
  location:            https://github.com/tarleb/hslua-pandoc-types.git

common common-options
  build-depends:       base                  >= 4.12     && < 5
                     , bytestring            >= 0.10     && < 0.12
                     , exceptions            >= 0.8      && < 0.11
                     , hslua                 >= 2.0.1    && < 2.1
                     , hslua-marshalling     >= 2.0.1    && < 2.1
                     , pandoc-types          >= 1.22.1   && < 1.23
                     , safe                  >= 0.3      && < 0.4
                     , text                  >= 1.1.1.0  && < 1.3
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  c-sources:           cbits/listmod.c
  exposed-modules:     HsLua.Pandoc.Types
                     , HsLua.Pandoc.Types.Alignment
                     , HsLua.Pandoc.Types.Attr
                     , HsLua.Pandoc.Types.Block
                     , HsLua.Pandoc.Types.Cell
                     , HsLua.Pandoc.Types.Citation
                     , HsLua.Pandoc.Types.CitationMode
                     , HsLua.Pandoc.Types.Content
                     , HsLua.Pandoc.Types.Format
                     , HsLua.Pandoc.Types.Inline
                     , HsLua.Pandoc.Types.List
                     , HsLua.Pandoc.Types.ListAttributes
                     , HsLua.Pandoc.Types.MathType
                     , HsLua.Pandoc.Types.MetaValue
                     , HsLua.Pandoc.Types.Pandoc
                     , HsLua.Pandoc.Types.QuoteType
                     , HsLua.Pandoc.Types.TableParts

test-suite hslua-pandoc-types-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-hslua-pandoc-types.hs
  build-depends:       hslua-pandoc-types
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
                     , tasty-lua            >= 1.0
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
